# computer-graphics

./: .gitignore
project3/: CMakeLists.txt  circle.cpp  circle.h  drawingarea.cpp  drawingarea.h  filledShape.h  line.cpp  line.h  main.cpp  mainwindow.cpp  mainwindow.h  polygon.cpp  polygon.h  rectangle.cpp  rectangle.h  shape.h
project5/: CMakeLists.txt  cylinder.h  drawingarea.cpp  drawingarea.h  mainwindow.cpp  mainwindow.h
project5/Math/: Matrix.cpp  Matrix.h  Vector.cpp  Vector.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
project5/Models3D/: Camera.cpp  Camera.h  Cylinder.cpp  Cylinder.h  Mesh.cpp  Mesh.h
project5/Transformations/: RotationMatrix.h  ScaleMatrix.h  Transformation.h  TranslationMatrix.h
task1/image_viewer/: pubspec.yaml
task1/image_viewer/lib/: main.dart  state.dart
task1/image_viewer/lib/filters/: averageDithering.dart  convolutionFilter.dart  filter.dart  grayscaleConversion.dart  linearFilter.dart  octreeQuantization.dart
task1/image_viewer/lib/widgets/: filterManager.dart  filterManagerActions.dart  graph.dart  imageActions.dart  imageProcessingActions.dart
task1/image_viewer/macos/Runner/: DebugProfile.entitlements
task1/image_viewer/macos/Runner.xcodeproj/: project.pbxproj
task1/image_viewer/macos/Runner/Configs/: AppInfo.xcconfig
task1/image_viewer_bak/lib/: state.dart
task1/image_viewer_bak/lib/widgets/: filterActions.dart  filterList.dart  filterManagerState.dart  imageActions.dart
